--- a/styles/style.css
+++ b/styles/style.css
@@ -277,6 +277,7 @@
     color: #ffffff;
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .skillsSectionLimiter {
@@ -334,15 +335,23 @@
 .greenStripeSkillHeadingContainer {
     display: flex;
     align-items: center;
-    gap: 32px;
-    position: relative;
+    gap: 16px;
 }
 
 .skillsGreenStripe {
-    position: absolute;
-    right: -240%;
-    width: 280%;
+    flex: 1;
+    position: relative;
     height: 3px;
+    background-color: var(--color-secondaryVer2);
+}
+
+.skillsGreenStripe::after {
+    content: '';
+    position: absolute;
+    left: 100%;
+    top: 0;
+    height: 3px;
+    width: 200px;
     background-color: var(--color-secondaryVer2);
 }
 
